# Autonomous-vehicles-conquering-the-world

./: README.md  face-recognition-test.py  final-lab.py  pyproject.toml
xbee-camera/: ov7670.cpp  ov7670.h  xbee-camera.ino
xbee-receiver/: xbee-receiver.ino
