[tool.poetry]
name = "xbee-broadcast"
version = "0.1.0"
description = ""
authors = ["Bartosz Sójka <bartsoj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyserial = "^3.5"
numpy = "^2.1.3"
pysdl2 = "^0.9.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
